fix: PDF print overlapping text content for the table

--- a/frappe/templates/styles/standard.css
+++ b/frappe/templates/styles/standard.css
@@ -166,6 +166,6 @@ table td div {
 	max-height: 150px;
 }
 
-.print-format [data-fieldtype="Table"] {
+.print-preview [data-fieldtype="Table"] {
 	overflow: auto;
 }
